# rst2gem

./: README.md  gemify  pyproject.toml  rst2gem.py
