[tool.poetry]
name = "rst2gem"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx-gemini-builder = "^1.1.1"
gemfeed = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.4"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
